@@ -45,6 +45,7 @@ source other than the configuration.
 * Added the proxyFactory method to application.service.LoadBalancedService.
 * Added a getProxy method to the ProxyManager.
 * Updated txlbWeb.tac to pass the ProxyManager in the new, improved way.
+* Added conditional index-based naming.
 
 2008.06.27 oubiwann
 
